force-app/main/default/objects/Account_Marketplace_Map__c/Account_Marketplace_Map__c.object-meta.xml
<CustomObject>
    <label>Account Marketplace Map</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Marketplace Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Marketplace Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>