force-app/main/default/objects/Account_Marketplace_Map__c/fields/is_Private__c.field-meta.xml
<CustomField>
    <fullName>is_Private__c</fullName>
    <formula>Marketplace__r.is_Private__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Private</label>
    <type>Checkbox</type>
</CustomField>