force-app/main/default/objects/Account_Marketplace_Map__c/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketplace</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marketplace__c.is_Private__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>Account Marketplace Maps</relationshipLabel>
    <relationshipName>Account_Marketplace_Maps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>